{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 366,
  "lineage": "cab20d20-55ae-19cd-3c4e-8ff4c1b1e9b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c02e4a549393110",
            "arn": "arn:aws:ec2:us-east-1:105921048477:elastic-ip/eipalloc-08c02e4a549393110",
            "association_id": "eipassoc-0f4f9ab10a903516e",
            "domain": "vpc",
            "id": "eipalloc-08c02e4a549393110",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04c0da13b44128b80",
            "private_dns": "ip-10-0-0-162.ec2.internal",
            "private_ip": "10.0.0.162",
            "public_dns": "ec2-54-147-217-248.compute-1.amazonaws.com",
            "public_ip": "54.147.217.248",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:internet-gateway/igw-0606093d1cb523d4e",
            "id": "igw-0606093d1cb523d4e",
            "owner_id": "105921048477",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-internet-gateway"
            },
            "tags_all": {
              "Name": "pedidos-internet-gateway"
            },
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c02e4a549393110",
            "association_id": "eipassoc-0f4f9ab10a903516e",
            "connectivity_type": "public",
            "id": "nat-0f9a15c0b25698d38",
            "network_interface_id": "eni-04c0da13b44128b80",
            "private_ip": "10.0.0.162",
            "public_ip": "54.147.217.248",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ceb6e334b61cb374",
            "tags": {
              "Name": "pedidos-nat-gateway"
            },
            "tags_all": {
              "Name": "pedidos-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:route-table/rtb-0a0f038f7873195a6",
            "id": "rtb-0a0f038f7873195a6",
            "owner_id": "105921048477",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9a15c0b25698d38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pedidos-private-route-table"
            },
            "tags_all": {
              "Name": "pedidos-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "rtb-0a0f038f7873195a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:route-table/rtb-0daeba2bd52bd61a5",
            "id": "rtb-0daeba2bd52bd61a5",
            "owner_id": "105921048477",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0606093d1cb523d4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pedidos-public-route-table"
            },
            "tags_all": {
              "Name": "pedidos-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "rtb-0daeba2bd52bd61a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da376a83c5d2081d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0f038f7873195a6",
            "subnet_id": "subnet-07a6d1c660c34e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc1fa4979f9a0dc8",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0f038f7873195a6",
            "subnet_id": "subnet-08666f41728cab914"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b739d20c96b12a9f",
            "region": "us-east-1",
            "route_table_id": "rtb-0daeba2bd52bd61a5",
            "subnet_id": "subnet-0ceb6e334b61cb374"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efb24299eaa3ac26",
            "region": "us-east-1",
            "route_table_id": "rtb-0daeba2bd52bd61a5",
            "subnet_id": "subnet-0338d2b1a51d5589e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:subnet/subnet-07a6d1c660c34e225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a6d1c660c34e225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105921048477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-private-subnet-1"
            },
            "tags_all": {
              "Name": "pedidos-private-subnet-1"
            },
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "subnet-07a6d1c660c34e225",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:subnet/subnet-08666f41728cab914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08666f41728cab914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105921048477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-private-subnet-2"
            },
            "tags_all": {
              "Name": "pedidos-private-subnet-2"
            },
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "subnet-08666f41728cab914",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:subnet/subnet-0ceb6e334b61cb374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb6e334b61cb374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105921048477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-public-subnet-1"
            },
            "tags_all": {
              "Name": "pedidos-public-subnet-1"
            },
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "subnet-0ceb6e334b61cb374",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:subnet/subnet-0338d2b1a51d5589e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0338d2b1a51d5589e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105921048477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-public-subnet-2"
            },
            "tags_all": {
              "Name": "pedidos-public-subnet-2"
            },
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "subnet-0338d2b1a51d5589e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:vpc/vpc-0c2490c9b7645e55b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0963c3d7b262174ae",
            "default_route_table_id": "rtb-08cf220df42c906fc",
            "default_security_group_id": "sg-01c3e4d5d5d8312f9",
            "dhcp_options_id": "dopt-625ce518",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2490c9b7645e55b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08cf220df42c906fc",
            "owner_id": "105921048477",
            "region": "us-east-1",
            "tags": {
              "Name": "pedidos-vpc"
            },
            "tags_all": {
              "Name": "pedidos-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pedidos_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5",
            "arn_suffix": "app/pedidos-alb/ef71a33cab78bab5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pedidos-alb-135833985.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pedidos-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-068cb94f67c118cc5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0338d2b1a51d5589e"
              },
              {
                "subnet_id": "subnet-0ceb6e334b61cb374"
              }
            ],
            "subnets": [
              "subnet-0338d2b1a51d5589e",
              "subnet-0ceb6e334b61cb374"
            ],
            "vpc_id": "vpc-0c2490c9b7645e55b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pedidos_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/e220111c79892859",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/e220111c79892859",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/e220111c79892859"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.pedidos-api.aws_lb.pedidos_alb",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pedidos_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/997966bd5830a8f4",
            "certificate_arn": "arn:aws:acm:us-east-1:105921048477:certificate/981d70bf-528e-4a2d-a3d0-ab87a91fcf72",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:targetgroup/pedidos-tg/a112b61e37e73700",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/997966bd5830a8f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:listener/app/pedidos-alb/ef71a33cab78bab5/997966bd5830a8f4"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.pedidos-api.aws_lb.pedidos_alb",
            "module.pedidos-api.aws_lb_target_group.pedidos_tg",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pedidos_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:targetgroup/pedidos-tg/a112b61e37e73700",
            "arn_suffix": "targetgroup/pedidos-tg/a112b61e37e73700",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105921048477:targetgroup/pedidos-tg/a112b61e37e73700",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:105921048477:loadbalancer/app/pedidos-alb/ef71a33cab78bab5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pedidos-tg",
            "port": 5678,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105921048477:targetgroup/pedidos-tg/a112b61e37e73700"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pedidos_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:security-group/sg-068cb94f67c118cc5",
            "description": "Allow HTTP and HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068cb94f67c118cc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pedidos-alb-sg",
            "name_prefix": "",
            "owner_id": "105921048477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "sg-068cb94f67c118cc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pedidos_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:security-group/sg-0539439405924a502",
            "description": "Allow ECS tasks to access EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539439405924a502",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "pedidos-efs-sg",
            "name_prefix": "",
            "owner_id": "105921048477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "sg-0539439405924a502",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pedidos_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105921048477:security-group/sg-0d2b9920e32dd40ba",
            "description": "Allow traffic to ECS backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2b9920e32dd40ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068cb94f67c118cc5"
                ],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "pedidos-service-sg",
            "name_prefix": "",
            "owner_id": "105921048477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2490c9b7645e55b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105921048477",
            "id": "sg-0d2b9920e32dd40ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nfs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2391074111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d2b9920e32dd40ba",
            "security_group_rule_id": "sgr-08de8047de77e7069",
            "self": false,
            "source_security_group_id": "sg-0d2b9920e32dd40ba",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg",
            "module.pedidos-api.aws_security_group.pedidos_service_sg"
          ]
        }
      ]
    },
    {
      "module": "module.pedidos-api",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nfs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4113239395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d2b9920e32dd40ba",
            "security_group_rule_id": "sgr-08de8047de77e7069",
            "self": false,
            "source_security_group_id": "sg-0d2b9920e32dd40ba",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.pedidos-api.aws_security_group.pedidos_alb_sg",
            "module.pedidos-api.aws_security_group.pedidos_service_sg"
          ]
        }
      ]
    }
  ]
}